Dodan osnovni kod za sve entitete, sve dto-ove, sve kontrolere, sve servise, sve repozitorije te util i config datoteke.

--- a/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
+++ b/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=MojKvart
-spring.datasource.url=jdbc:postgresql://localhost:5432/kvartDB
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/KvartDB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
