--- a/IzvorniKod/mojKvart/backend/pom.xml
+++ b/IzvorniKod/mojKvart/backend/pom.xml
@@ -46,16 +46,22 @@
             <scope>provided</scope>
         </dependency>
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.7.4</version>
+</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    <groupId>jakarta.validation</groupId>
+    <artifactId>jakarta.validation-api</artifactId>
+    <version>3.0.0</version>
+</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
