--- a/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
+++ b/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
@@ -5,6 +5,18 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql 
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+
+spring.security.oauth2.client.registration.google.client-id=11356598812-59m33cfmg20532aau1s7icd7bo678im9.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.client-name=Google
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
