--- a/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
+++ b/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=MojKvart
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/KvartDB
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://dpg-csqj09qj1k6c738j2o3g-a.oregon-postgres.render.com:5432/kvartdb
+spring.datasource.username=kvartdb_user
+spring.datasource.password=4wNmKDrXvqwHDvfG2SpTopFO71NJVrZh
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
