--- a/IzvorniKod/mojKvart/backend/Dockerfile
+++ b/IzvorniKod/mojKvart/backend/Dockerfile
@@ -3,7 +3,7 @@ COPY . .
 RUN mvn clean package -DSkipTests
 
 FROM openjdk:17.0.1-jdk-slim 
-COPY --from=build target/MojKvart-0.0.1-SNAPSHOT.jar MojKvart.jar
+COPY --from=build target/moj-kvart-0.0.1-SNAPSHOT.jar MojKvart.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "MojKvart.jar"]
 
