Validacija logina i signupa poboljšana s preciznijim porukama o greškama

--- a/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
+++ b/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
@@ -1,21 +1,15 @@
 spring.application.name=MojKvart
-spring.datasource.url=jdbc:postgresql://dpg-csqj09qj1k6c738j2o3g-a.oregon-postgres.render.com:5432/kvartdb
-spring.datasource.username=kvartdb_user
-spring.datasource.password=4wNmKDrXvqwHDvfG2SpTopFO71NJVrZh
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-server.servlet.context-path=/api
-server.port=${PORT:8080}
 
-#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-
-spring.security.oauth2.client.registration.google.client-id=11356598812-59m33cfmg20532aau1s7icd7bo678im9.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=profile,email
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI}
 spring.security.oauth2.client.registration.google.client-name=Google
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 
