--- a/IzvorniKod/mojKvart/frontend/package.json
+++ b/IzvorniKod/mojKvart/frontend/package.json
@@ -26,5 +26,8 @@
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
     "vite": "^5.4.10"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
