--- a/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
+++ b/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=MojKvart
+
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
@@ -15,3 +16,10 @@ spring.security.oauth2.client.registration.google.authorization-grant-type=autho
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${VERIFICATION_MAIL_SENDER_USERNAME}
+spring.mail.password=${VERIFICATION_MAIL_SENDER_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
