--- a/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
+++ b/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.security.oauth2.client.provider.google.authorization-uri=https://accounts
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 
+frontend.uri=${FRONTEND_URI}
+server.port=${SERVER_PORT}
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${VERIFICATION_MAIL_SENDER_USERNAME}
