--- a/IzvorniKod/mojKvart/frontend/package.json
+++ b/IzvorniKod/mojKvart/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "leaflet": "^1.9.4",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
