--- a/IzvorniKod/mojKvart/frontend/package.json
+++ b/IzvorniKod/mojKvart/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0-rc.2",
