--- a/IzvorniKod/mojKvart/frontend/package.json
+++ b/IzvorniKod/mojKvart/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "gapi-script": "^1.2.0",
     "leaflet": "^1.9.4",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
