--- a/IzvorniKod/mojKvart/backend/pom.xml
+++ b/IzvorniKod/mojKvart/backend/pom.xml
@@ -101,7 +101,15 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.7.18</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>io.github.cdimascio</groupId>
