--- a/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
+++ b/IzvorniKod/mojKvart/backend/src/main/resources/application.properties
@@ -21,11 +21,12 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${VERIFICATION_MAIL_SENDER_EMAIL}
 spring.mail.password=${VERIFICATION_MAIL_SENDER_PASSWORD}
+spring.mail.protocol=smtp
+spring.mail.debug=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 jwt.secretkey=${JWT_SECRET_KEY}
 frontend.uri=${FRONTEND_URI}
 server.port=${SERVER_PORT}
-
-spring.config.import=optional:file:.env
